// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelperWidgetContent should match a snapshot for docs 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="hcq1aa1"
      >
        <h2
          class="eh96l6x ewfctk4 e15ggth7"
        >
          Webhooks
        </h2>
      </div>
      <div
        class="e6p05ya hhl1bas"
      >
        <p
          class="e1wasvgh"
        >
          Webhook Docs
        </p>
        <p
          class="e11jaxfn elle7d2"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
        </p>
        <a
          class="h11lsmke"
        >
          View in docs
        </a>
      </div>
      <div
        class="e6p05ya hhl1bas"
      >
        <p
          class="e1wasvgh"
        >
          Webhook Docs
        </p>
        <p
          class="e11jaxfn elle7d2"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
        </p>
        <a
          class="h11lsmke"
        >
          View in docs
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="hcq1aa1"
    >
      <h2
        class="eh96l6x ewfctk4 e15ggth7"
      >
        Webhooks
      </h2>
    </div>
    <div
      class="e6p05ya hhl1bas"
    >
      <p
        class="e1wasvgh"
      >
        Webhook Docs
      </p>
      <p
        class="e11jaxfn elle7d2"
      >
        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
      </p>
      <a
        class="h11lsmke"
      >
        View in docs
      </a>
    </div>
    <div
      class="e6p05ya hhl1bas"
    >
      <p
        class="e1wasvgh"
      >
        Webhook Docs
      </p>
      <p
        class="e11jaxfn elle7d2"
      >
        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
      </p>
      <a
        class="h11lsmke"
      >
        View in docs
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HelperWidgetContent should match a snapshot for videos 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="hcq1aa1"
      >
        <h2
          class="eh96l6x ewfctk4 e15ggth7"
        >
          Webhooks
        </h2>
      </div>
      <div
        class="e6p05ya hhl1bas"
      >
        <svg
          fill="none"
          height="158"
          viewBox="0 0 215 158"
          width="215"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0.566406 111.851V4.29987C0.604851 2.41016 2.13968 0.884885 4.04122 0.84668H168.121C170.022 0.884885 171.557 2.41016 171.595 4.29987V111.863L0.566406 111.851Z"
            fill="#262F69"
          />
          <path
            d="M171.589 111.85V125.662C171.551 127.552 170.016 129.077 168.115 129.115H4.03536C2.13087 129.077 0.598992 127.552 0.560547 125.662V111.85H171.589Z"
            fill="#31448F"
          />
          <path
            d="M122.691 153.532H49.4688V156.985H122.691V153.532Z"
            fill="#31448F"
          />
          <path
            d="M110.396 153.546H61.7578L65.2326 129.115H106.922L110.396 153.546Z"
            fill="#262F69"
          />
          <path
            d="M164.64 7.75293H7.51953V104.942H164.64V7.75293Z"
            fill="#23A4DE"
          />
          <path
            d="M206.182 157.221H160.577C155.719 157.209 151.779 153.295 151.768 148.466V52.879C151.779 48.0504 155.719 44.1358 160.577 44.124H206.182C211.041 44.1358 214.98 48.0504 214.991 52.879V148.469C214.977 153.298 211.041 157.209 206.182 157.221Z"
            fill="#262F69"
          />
          <path
            d="M206.188 157.222H160.583C155.724 157.21 151.785 153.295 151.773 148.467V137.378C180.823 137.378 189.147 137.378 214.997 137.378V148.47C214.983 153.298 211.046 157.21 206.188 157.222Z"
            fill="#31448F"
          />
          <path
            d="M210.82 53.0547H155.936V142.235H210.82V53.0547Z"
            fill="#7BC9EB"
          />
          <path
            d="M189.454 49.5252H178.237C177.731 49.5223 177.323 49.1167 177.32 48.6142C177.323 48.1116 177.731 47.7061 178.237 47.7031H189.475C189.98 47.7061 190.389 48.1116 190.392 48.6142C190.389 49.1197 189.977 49.5282 189.469 49.5252C189.463 49.5252 189.46 49.5252 189.454 49.5252Z"
            fill="#F2F2F2"
          />
          <path
            d="M183.377 154.035C180.982 154.035 179.039 152.104 179.039 149.723C179.039 147.343 180.982 145.412 183.377 145.412C185.773 145.412 187.716 147.343 187.716 149.723C187.713 152.101 185.773 154.029 183.377 154.035Z"
            fill="#F2F2F2"
          />
          <path
            d="M174.886 74.7026C167.749 57.6139 148.078 49.5339 130.951 56.6556C119.24 61.525 111.277 72.5613 110.365 85.1872C100.468 86.5528 93.5541 95.6651 94.9227 105.54C96.1613 114.475 103.821 121.126 112.861 121.117H174.886C187.732 121.117 198.146 110.727 198.146 97.9102C198.146 85.0932 187.732 74.7026 174.886 74.7026Z"
            fill="white"
          />
          <path
            d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936Z"
            fill="white"
          />
          <path
            d="M116.416 26.3916H98.8181C92.047 26.3916 86.5369 31.6946 86.5369 38.2128L73.7051 75.6746C73.7051 82.1929 79.2152 87.4958 85.9863 87.4958H116.416C123.187 87.4958 128.697 82.1929 128.697 75.6746V38.2128C128.697 31.6946 123.187 26.3916 116.416 26.3916Z"
            fill="white"
          />
          <path
            d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936ZM73.4089 45.1995L60.4887 57.634L71.9784 68.6919C72.9716 69.6477 72.9716 71.1974 71.9784 72.1516C70.9869 73.1075 69.3767 73.1075 68.3835 72.1516L55.0955 59.3631C54.1023 58.4072 54.1023 56.8592 55.0955 55.9034L69.8123 41.7398C70.8055 40.7839 72.4157 40.7839 73.4089 41.7398C74.4004 42.694 74.4004 44.2436 73.4089 45.1995ZM95.6321 39.443L82.1881 76.0779C81.7203 77.3535 80.2678 78.0206 78.9441 77.5704C77.6204 77.1202 76.9255 75.7223 77.3933 74.4483L90.8372 37.8135C91.305 36.5395 92.7558 35.8707 94.0812 36.321C95.4049 36.7712 96.0999 38.1691 95.6321 39.443ZM115.515 57.988L100.798 72.1516C99.8052 73.1075 98.1951 73.1075 97.2018 72.1516C96.2103 71.1974 96.2103 69.6477 97.2018 68.6919L110.122 56.2573L98.6323 45.1995C97.6391 44.2436 97.6391 42.694 98.6323 41.7398C99.6239 40.7839 101.234 40.7839 102.227 41.7398L115.515 54.5283C116.508 55.4841 116.508 57.0321 115.515 57.988Z"
            fill="#FFB71B"
          />
          <path
            d="M116.413 26.3916H92.6837C83.7552 50.2535 79.1063 63.6759 69.8086 87.4958H116.413C123.184 87.4958 128.694 82.1929 128.694 75.6746V38.2128C128.694 31.6946 123.184 26.3916 116.413 26.3916ZM95.9686 39.4411L82.5247 76.0759C82.0569 77.3515 80.6043 78.0186 79.2806 77.5684C77.9569 77.1182 77.262 75.7203 77.7298 74.4463L91.1737 37.8115C91.6415 36.5376 93.0923 35.8688 94.4177 36.319C95.7414 36.7692 96.4364 38.1671 95.9686 39.4411ZM115.515 57.9861L100.798 72.1496C99.8046 73.1055 98.1944 73.1055 97.2012 72.1496C96.2097 71.1954 96.2097 69.6458 97.2012 68.6899L110.121 56.2554L98.6317 45.1976C97.6385 44.2417 97.6385 42.692 98.6317 41.7378C99.6232 40.7819 101.233 40.7819 102.227 41.7378L115.515 54.5263C116.508 55.4822 116.508 57.0302 115.515 57.9861Z"
            fill="#FFB71B"
          />
        </svg>
        <p
          class="e1wasvgh"
        >
          Webhook Video
        </p>
        <p
          class="e11jaxfn elle7d2"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
        </p>
        <a
          class="h11lsmke"
        >
          View on Youtube
        </a>
      </div>
      <div
        class="e6p05ya hhl1bas"
      >
        <svg
          fill="none"
          height="158"
          viewBox="0 0 215 158"
          width="215"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0.566406 111.851V4.29987C0.604851 2.41016 2.13968 0.884885 4.04122 0.84668H168.121C170.022 0.884885 171.557 2.41016 171.595 4.29987V111.863L0.566406 111.851Z"
            fill="#262F69"
          />
          <path
            d="M171.589 111.85V125.662C171.551 127.552 170.016 129.077 168.115 129.115H4.03536C2.13087 129.077 0.598992 127.552 0.560547 125.662V111.85H171.589Z"
            fill="#31448F"
          />
          <path
            d="M122.691 153.532H49.4688V156.985H122.691V153.532Z"
            fill="#31448F"
          />
          <path
            d="M110.396 153.546H61.7578L65.2326 129.115H106.922L110.396 153.546Z"
            fill="#262F69"
          />
          <path
            d="M164.64 7.75293H7.51953V104.942H164.64V7.75293Z"
            fill="#23A4DE"
          />
          <path
            d="M206.182 157.221H160.577C155.719 157.209 151.779 153.295 151.768 148.466V52.879C151.779 48.0504 155.719 44.1358 160.577 44.124H206.182C211.041 44.1358 214.98 48.0504 214.991 52.879V148.469C214.977 153.298 211.041 157.209 206.182 157.221Z"
            fill="#262F69"
          />
          <path
            d="M206.188 157.222H160.583C155.724 157.21 151.785 153.295 151.773 148.467V137.378C180.823 137.378 189.147 137.378 214.997 137.378V148.47C214.983 153.298 211.046 157.21 206.188 157.222Z"
            fill="#31448F"
          />
          <path
            d="M210.82 53.0547H155.936V142.235H210.82V53.0547Z"
            fill="#7BC9EB"
          />
          <path
            d="M189.454 49.5252H178.237C177.731 49.5223 177.323 49.1167 177.32 48.6142C177.323 48.1116 177.731 47.7061 178.237 47.7031H189.475C189.98 47.7061 190.389 48.1116 190.392 48.6142C190.389 49.1197 189.977 49.5282 189.469 49.5252C189.463 49.5252 189.46 49.5252 189.454 49.5252Z"
            fill="#F2F2F2"
          />
          <path
            d="M183.377 154.035C180.982 154.035 179.039 152.104 179.039 149.723C179.039 147.343 180.982 145.412 183.377 145.412C185.773 145.412 187.716 147.343 187.716 149.723C187.713 152.101 185.773 154.029 183.377 154.035Z"
            fill="#F2F2F2"
          />
          <path
            d="M174.886 74.7026C167.749 57.6139 148.078 49.5339 130.951 56.6556C119.24 61.525 111.277 72.5613 110.365 85.1872C100.468 86.5528 93.5541 95.6651 94.9227 105.54C96.1613 114.475 103.821 121.126 112.861 121.117H174.886C187.732 121.117 198.146 110.727 198.146 97.9102C198.146 85.0932 187.732 74.7026 174.886 74.7026Z"
            fill="white"
          />
          <path
            d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936Z"
            fill="white"
          />
          <path
            d="M116.416 26.3916H98.8181C92.047 26.3916 86.5369 31.6946 86.5369 38.2128L73.7051 75.6746C73.7051 82.1929 79.2152 87.4958 85.9863 87.4958H116.416C123.187 87.4958 128.697 82.1929 128.697 75.6746V38.2128C128.697 31.6946 123.187 26.3916 116.416 26.3916Z"
            fill="white"
          />
          <path
            d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936ZM73.4089 45.1995L60.4887 57.634L71.9784 68.6919C72.9716 69.6477 72.9716 71.1974 71.9784 72.1516C70.9869 73.1075 69.3767 73.1075 68.3835 72.1516L55.0955 59.3631C54.1023 58.4072 54.1023 56.8592 55.0955 55.9034L69.8123 41.7398C70.8055 40.7839 72.4157 40.7839 73.4089 41.7398C74.4004 42.694 74.4004 44.2436 73.4089 45.1995ZM95.6321 39.443L82.1881 76.0779C81.7203 77.3535 80.2678 78.0206 78.9441 77.5704C77.6204 77.1202 76.9255 75.7223 77.3933 74.4483L90.8372 37.8135C91.305 36.5395 92.7558 35.8707 94.0812 36.321C95.4049 36.7712 96.0999 38.1691 95.6321 39.443ZM115.515 57.988L100.798 72.1516C99.8052 73.1075 98.1951 73.1075 97.2018 72.1516C96.2103 71.1974 96.2103 69.6477 97.2018 68.6919L110.122 56.2573L98.6323 45.1995C97.6391 44.2436 97.6391 42.694 98.6323 41.7398C99.6239 40.7839 101.234 40.7839 102.227 41.7398L115.515 54.5283C116.508 55.4841 116.508 57.0321 115.515 57.988Z"
            fill="#FFB71B"
          />
          <path
            d="M116.413 26.3916H92.6837C83.7552 50.2535 79.1063 63.6759 69.8086 87.4958H116.413C123.184 87.4958 128.694 82.1929 128.694 75.6746V38.2128C128.694 31.6946 123.184 26.3916 116.413 26.3916ZM95.9686 39.4411L82.5247 76.0759C82.0569 77.3515 80.6043 78.0186 79.2806 77.5684C77.9569 77.1182 77.262 75.7203 77.7298 74.4463L91.1737 37.8115C91.6415 36.5376 93.0923 35.8688 94.4177 36.319C95.7414 36.7692 96.4364 38.1671 95.9686 39.4411ZM115.515 57.9861L100.798 72.1496C99.8046 73.1055 98.1944 73.1055 97.2012 72.1496C96.2097 71.1954 96.2097 69.6458 97.2012 68.6899L110.121 56.2554L98.6317 45.1976C97.6385 44.2417 97.6385 42.692 98.6317 41.7378C99.6232 40.7819 101.233 40.7819 102.227 41.7378L115.515 54.5263C116.508 55.4822 116.508 57.0302 115.515 57.9861Z"
            fill="#FFB71B"
          />
        </svg>
        <p
          class="e1wasvgh"
        >
          Webhook Video
        </p>
        <p
          class="e11jaxfn elle7d2"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
        </p>
        <a
          class="h11lsmke"
        >
          View on Youtube
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="hcq1aa1"
    >
      <h2
        class="eh96l6x ewfctk4 e15ggth7"
      >
        Webhooks
      </h2>
    </div>
    <div
      class="e6p05ya hhl1bas"
    >
      <svg
        fill="none"
        height="158"
        viewBox="0 0 215 158"
        width="215"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.566406 111.851V4.29987C0.604851 2.41016 2.13968 0.884885 4.04122 0.84668H168.121C170.022 0.884885 171.557 2.41016 171.595 4.29987V111.863L0.566406 111.851Z"
          fill="#262F69"
        />
        <path
          d="M171.589 111.85V125.662C171.551 127.552 170.016 129.077 168.115 129.115H4.03536C2.13087 129.077 0.598992 127.552 0.560547 125.662V111.85H171.589Z"
          fill="#31448F"
        />
        <path
          d="M122.691 153.532H49.4688V156.985H122.691V153.532Z"
          fill="#31448F"
        />
        <path
          d="M110.396 153.546H61.7578L65.2326 129.115H106.922L110.396 153.546Z"
          fill="#262F69"
        />
        <path
          d="M164.64 7.75293H7.51953V104.942H164.64V7.75293Z"
          fill="#23A4DE"
        />
        <path
          d="M206.182 157.221H160.577C155.719 157.209 151.779 153.295 151.768 148.466V52.879C151.779 48.0504 155.719 44.1358 160.577 44.124H206.182C211.041 44.1358 214.98 48.0504 214.991 52.879V148.469C214.977 153.298 211.041 157.209 206.182 157.221Z"
          fill="#262F69"
        />
        <path
          d="M206.188 157.222H160.583C155.724 157.21 151.785 153.295 151.773 148.467V137.378C180.823 137.378 189.147 137.378 214.997 137.378V148.47C214.983 153.298 211.046 157.21 206.188 157.222Z"
          fill="#31448F"
        />
        <path
          d="M210.82 53.0547H155.936V142.235H210.82V53.0547Z"
          fill="#7BC9EB"
        />
        <path
          d="M189.454 49.5252H178.237C177.731 49.5223 177.323 49.1167 177.32 48.6142C177.323 48.1116 177.731 47.7061 178.237 47.7031H189.475C189.98 47.7061 190.389 48.1116 190.392 48.6142C190.389 49.1197 189.977 49.5282 189.469 49.5252C189.463 49.5252 189.46 49.5252 189.454 49.5252Z"
          fill="#F2F2F2"
        />
        <path
          d="M183.377 154.035C180.982 154.035 179.039 152.104 179.039 149.723C179.039 147.343 180.982 145.412 183.377 145.412C185.773 145.412 187.716 147.343 187.716 149.723C187.713 152.101 185.773 154.029 183.377 154.035Z"
          fill="#F2F2F2"
        />
        <path
          d="M174.886 74.7026C167.749 57.6139 148.078 49.5339 130.951 56.6556C119.24 61.525 111.277 72.5613 110.365 85.1872C100.468 86.5528 93.5541 95.6651 94.9227 105.54C96.1613 114.475 103.821 121.126 112.861 121.117H174.886C187.732 121.117 198.146 110.727 198.146 97.9102C198.146 85.0932 187.732 74.7026 174.886 74.7026Z"
          fill="white"
        />
        <path
          d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936Z"
          fill="white"
        />
        <path
          d="M116.416 26.3916H98.8181C92.047 26.3916 86.5369 31.6946 86.5369 38.2128L73.7051 75.6746C73.7051 82.1929 79.2152 87.4958 85.9863 87.4958H116.416C123.187 87.4958 128.697 82.1929 128.697 75.6746V38.2128C128.697 31.6946 123.187 26.3916 116.416 26.3916Z"
          fill="white"
        />
        <path
          d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936ZM73.4089 45.1995L60.4887 57.634L71.9784 68.6919C72.9716 69.6477 72.9716 71.1974 71.9784 72.1516C70.9869 73.1075 69.3767 73.1075 68.3835 72.1516L55.0955 59.3631C54.1023 58.4072 54.1023 56.8592 55.0955 55.9034L69.8123 41.7398C70.8055 40.7839 72.4157 40.7839 73.4089 41.7398C74.4004 42.694 74.4004 44.2436 73.4089 45.1995ZM95.6321 39.443L82.1881 76.0779C81.7203 77.3535 80.2678 78.0206 78.9441 77.5704C77.6204 77.1202 76.9255 75.7223 77.3933 74.4483L90.8372 37.8135C91.305 36.5395 92.7558 35.8707 94.0812 36.321C95.4049 36.7712 96.0999 38.1691 95.6321 39.443ZM115.515 57.988L100.798 72.1516C99.8052 73.1075 98.1951 73.1075 97.2018 72.1516C96.2103 71.1974 96.2103 69.6477 97.2018 68.6919L110.122 56.2573L98.6323 45.1995C97.6391 44.2436 97.6391 42.694 98.6323 41.7398C99.6239 40.7839 101.234 40.7839 102.227 41.7398L115.515 54.5283C116.508 55.4841 116.508 57.0321 115.515 57.988Z"
          fill="#FFB71B"
        />
        <path
          d="M116.413 26.3916H92.6837C83.7552 50.2535 79.1063 63.6759 69.8086 87.4958H116.413C123.184 87.4958 128.694 82.1929 128.694 75.6746V38.2128C128.694 31.6946 123.184 26.3916 116.413 26.3916ZM95.9686 39.4411L82.5247 76.0759C82.0569 77.3515 80.6043 78.0186 79.2806 77.5684C77.9569 77.1182 77.262 75.7203 77.7298 74.4463L91.1737 37.8115C91.6415 36.5376 93.0923 35.8688 94.4177 36.319C95.7414 36.7692 96.4364 38.1671 95.9686 39.4411ZM115.515 57.9861L100.798 72.1496C99.8046 73.1055 98.1944 73.1055 97.2012 72.1496C96.2097 71.1954 96.2097 69.6458 97.2012 68.6899L110.121 56.2554L98.6317 45.1976C97.6385 44.2417 97.6385 42.692 98.6317 41.7378C99.6232 40.7819 101.233 40.7819 102.227 41.7378L115.515 54.5263C116.508 55.4822 116.508 57.0302 115.515 57.9861Z"
          fill="#FFB71B"
        />
      </svg>
      <p
        class="e1wasvgh"
      >
        Webhook Video
      </p>
      <p
        class="e11jaxfn elle7d2"
      >
        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
      </p>
      <a
        class="h11lsmke"
      >
        View on Youtube
      </a>
    </div>
    <div
      class="e6p05ya hhl1bas"
    >
      <svg
        fill="none"
        height="158"
        viewBox="0 0 215 158"
        width="215"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.566406 111.851V4.29987C0.604851 2.41016 2.13968 0.884885 4.04122 0.84668H168.121C170.022 0.884885 171.557 2.41016 171.595 4.29987V111.863L0.566406 111.851Z"
          fill="#262F69"
        />
        <path
          d="M171.589 111.85V125.662C171.551 127.552 170.016 129.077 168.115 129.115H4.03536C2.13087 129.077 0.598992 127.552 0.560547 125.662V111.85H171.589Z"
          fill="#31448F"
        />
        <path
          d="M122.691 153.532H49.4688V156.985H122.691V153.532Z"
          fill="#31448F"
        />
        <path
          d="M110.396 153.546H61.7578L65.2326 129.115H106.922L110.396 153.546Z"
          fill="#262F69"
        />
        <path
          d="M164.64 7.75293H7.51953V104.942H164.64V7.75293Z"
          fill="#23A4DE"
        />
        <path
          d="M206.182 157.221H160.577C155.719 157.209 151.779 153.295 151.768 148.466V52.879C151.779 48.0504 155.719 44.1358 160.577 44.124H206.182C211.041 44.1358 214.98 48.0504 214.991 52.879V148.469C214.977 153.298 211.041 157.209 206.182 157.221Z"
          fill="#262F69"
        />
        <path
          d="M206.188 157.222H160.583C155.724 157.21 151.785 153.295 151.773 148.467V137.378C180.823 137.378 189.147 137.378 214.997 137.378V148.47C214.983 153.298 211.046 157.21 206.188 157.222Z"
          fill="#31448F"
        />
        <path
          d="M210.82 53.0547H155.936V142.235H210.82V53.0547Z"
          fill="#7BC9EB"
        />
        <path
          d="M189.454 49.5252H178.237C177.731 49.5223 177.323 49.1167 177.32 48.6142C177.323 48.1116 177.731 47.7061 178.237 47.7031H189.475C189.98 47.7061 190.389 48.1116 190.392 48.6142C190.389 49.1197 189.977 49.5282 189.469 49.5252C189.463 49.5252 189.46 49.5252 189.454 49.5252Z"
          fill="#F2F2F2"
        />
        <path
          d="M183.377 154.035C180.982 154.035 179.039 152.104 179.039 149.723C179.039 147.343 180.982 145.412 183.377 145.412C185.773 145.412 187.716 147.343 187.716 149.723C187.713 152.101 185.773 154.029 183.377 154.035Z"
          fill="#F2F2F2"
        />
        <path
          d="M174.886 74.7026C167.749 57.6139 148.078 49.5339 130.951 56.6556C119.24 61.525 111.277 72.5613 110.365 85.1872C100.468 86.5528 93.5541 95.6651 94.9227 105.54C96.1613 114.475 103.821 121.126 112.861 121.117H174.886C187.732 121.117 198.146 110.727 198.146 97.9102C198.146 85.0932 187.732 74.7026 174.886 74.7026Z"
          fill="white"
        />
        <path
          d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936Z"
          fill="white"
        />
        <path
          d="M116.416 26.3916H98.8181C92.047 26.3916 86.5369 31.6946 86.5369 38.2128L73.7051 75.6746C73.7051 82.1929 79.2152 87.4958 85.9863 87.4958H116.416C123.187 87.4958 128.697 82.1929 128.697 75.6746V38.2128C128.697 31.6946 123.187 26.3916 116.416 26.3916Z"
          fill="white"
        />
        <path
          d="M116.413 26.3936H54.1972C47.4261 26.3936 41.916 31.6965 41.916 38.2148V75.6766C41.916 82.1948 47.4261 87.4978 54.1972 87.4978H116.413C123.185 87.4978 128.695 82.1948 128.695 75.6766V38.2148C128.695 31.6965 123.185 26.3936 116.413 26.3936ZM73.4089 45.1995L60.4887 57.634L71.9784 68.6919C72.9716 69.6477 72.9716 71.1974 71.9784 72.1516C70.9869 73.1075 69.3767 73.1075 68.3835 72.1516L55.0955 59.3631C54.1023 58.4072 54.1023 56.8592 55.0955 55.9034L69.8123 41.7398C70.8055 40.7839 72.4157 40.7839 73.4089 41.7398C74.4004 42.694 74.4004 44.2436 73.4089 45.1995ZM95.6321 39.443L82.1881 76.0779C81.7203 77.3535 80.2678 78.0206 78.9441 77.5704C77.6204 77.1202 76.9255 75.7223 77.3933 74.4483L90.8372 37.8135C91.305 36.5395 92.7558 35.8707 94.0812 36.321C95.4049 36.7712 96.0999 38.1691 95.6321 39.443ZM115.515 57.988L100.798 72.1516C99.8052 73.1075 98.1951 73.1075 97.2018 72.1516C96.2103 71.1974 96.2103 69.6477 97.2018 68.6919L110.122 56.2573L98.6323 45.1995C97.6391 44.2436 97.6391 42.694 98.6323 41.7398C99.6239 40.7839 101.234 40.7839 102.227 41.7398L115.515 54.5283C116.508 55.4841 116.508 57.0321 115.515 57.988Z"
          fill="#FFB71B"
        />
        <path
          d="M116.413 26.3916H92.6837C83.7552 50.2535 79.1063 63.6759 69.8086 87.4958H116.413C123.184 87.4958 128.694 82.1929 128.694 75.6746V38.2128C128.694 31.6946 123.184 26.3916 116.413 26.3916ZM95.9686 39.4411L82.5247 76.0759C82.0569 77.3515 80.6043 78.0186 79.2806 77.5684C77.9569 77.1182 77.262 75.7203 77.7298 74.4463L91.1737 37.8115C91.6415 36.5376 93.0923 35.8688 94.4177 36.319C95.7414 36.7692 96.4364 38.1671 95.9686 39.4411ZM115.515 57.9861L100.798 72.1496C99.8046 73.1055 98.1944 73.1055 97.2012 72.1496C96.2097 71.1954 96.2097 69.6458 97.2012 68.6899L110.121 56.2554L98.6317 45.1976C97.6385 44.2417 97.6385 42.692 98.6317 41.7378C99.6232 40.7819 101.233 40.7819 102.227 41.7378L115.515 54.5263C116.508 55.4822 116.508 57.0302 115.515 57.9861Z"
          fill="#FFB71B"
        />
      </svg>
      <p
        class="e1wasvgh"
      >
        Webhook Video
      </p>
      <p
        class="e11jaxfn elle7d2"
      >
        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe et itaque, nam sequi doloribus culpa unde! Itaque, asperiores! Rem est repudiandae placeat incidunt, adipisci maxime consequuntur. Suscipit facere nostru sunt.
      </p>
      <a
        class="h11lsmke"
      >
        View on Youtube
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
